--- a/msk_questions.html
+++ b/msk_questions.html
@@ -146,7 +146,7 @@
   <h1>MSK Questions Editor</h1>
   
   <div class="nav-links">
-    <a href="modular_mcq_quiz_app.html">Back to Quiz App</a>
+    <a href="index.html">Back to Quiz App</a>
     <a href="focs_questions.html">FOCS Questions</a>
     <a href="bcr_questions.html">BCR Questions</a>
     <a href="msk_questions.html">MSK Questions</a>
