--- a/index.html
+++ b/index.html
@@ -234,6 +234,19 @@
           </button>
         </div>
       </div>
+      <div class="dropdown mt-2 mb-4">
+        <button class="btn btn-outline-primary dropdown-toggle" type="button" id="moduleDropdown" data-bs-toggle="dropdown" aria-expanded="false">
+          Change Module
+        </button>
+        <ul class="dropdown-menu" aria-labelledby="moduleDropdown">
+          <li><a class="dropdown-item" href="#" data-module="all">All Questions</a></li>
+          <li><a class="dropdown-item" href="#" data-module="focs">FOCS</a></li>
+          <li><a class="dropdown-item" href="#" data-module="bcr">BCR</a></li>
+          <li><a class="dropdown-item" href="#" data-module="msk">MSK</a></li>
+          <li><a class="dropdown-item" href="#" data-module="anatomy">Anatomy</a></li>
+        </ul>
+      </div>
+    </div>
 
       <div class="row">
         <div class="col-md-6">
