--- a/index.html
+++ b/index.html
@@ -478,7 +478,8 @@
     </div>
   </div>
 
-  <script src="bcr-data.js"></script>
+  <script src="bcr-data1.js"></script>
+  <script src="bcr-data2.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   
@@ -14376,7 +14377,7 @@
     );
       
       // Sample BCR question
-      bcrQuestions.push(...bcrData);
+      bcrQuestions.push(...bcrData1, ...bcrData2);
       
       // Sample MSK question
       mskQuestions.push({
