--- a/index.html
+++ b/index.html
@@ -480,6 +480,8 @@
 
   <script src="bcr-data1.js"></script>
   <script src="bcr-data2.js"></script>
+  <script src="bcr-data3.js"></script>
+  <script src="bcr-data4.js"></script>
   <script src="focs-data.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
@@ -712,26 +714,7 @@
       focsQuestions.push(...focsData);
       
       // Sample BCR question
-      bcrQuestions.push({
-        question: "What is the primary cellular defect in Duchenne muscular dystrophy?",
-        options: [
-          "A) Deficiency of dystrophin protein",
-          "B) Abnormal myosin heavy chain",
-          "C) Defective acetylcholine receptors",
-          "D) Mitochondrial DNA mutations",
-          "E) Abnormal calcium channel function"
-        ],
-        correctIndex: 0,
-        explanations: [
-          "Correct: Duchenne muscular dystrophy is caused by mutations in the DMD gene leading to absence of functional dystrophin protein.",
-          "Incorrect: Myosin abnormalities are associated with some congenital myopathies, not DMD.",
-          "Incorrect: Acetylcholine receptor defects cause myasthenia gravis, not muscular dystrophy.",
-          "Incorrect: Mitochondrial DNA mutations cause mitochondrial myopathies, not DMD.",
-          "Incorrect: Calcium channel dysfunction is associated with periodic paralyses, not DMD."
-        ],
-        slideLink: "Neuromuscular Disorders, Slide 7",
-        topic: "Neuromuscular Disorders"
-      });
+      bcrQuestions.push(...bcrData1);
       
       // Sample MSK question
       mskQuestions.push({
