--- a/index.html
+++ b/index.html
@@ -714,7 +714,7 @@
       focsQuestions.push(...focsData);
       
       // Sample BCR question
-      bcrQuestions.push(...bcrData1, ...bcrData2, ...bcrData3, ...bcrData4);
+      bcrQuestions.push(...bcrData1, ...bcrData2, ...bcrData3);
       
       // Sample MSK question
       mskQuestions.push({
