--- a/index.html
+++ b/index.html
@@ -675,15 +675,15 @@ const anatomyQuestions = [];
     
    function addSampleQuestions() {
   // Example placeholder: Replace these with actual data imports like `focs1Data`, etc.
-  focs1Questions.push(...focs1Data);
-  focs2Questions.push(...(focs2Data);
-  focs3Questions.push(...(focs3Data);
+  focs1Questions.push(...focsData);
+  focs2Questions.push(...focs2Data);
+  focs3Questions.push(...focs3Data);
   focs4Questions.push(...focs4Data);
 
-  bcr1Questions.push(...(bcrData1);
-  bcr2Questions.push(...(bcrData2);
-  bcr3Questions.push(...(bcrData3);
-  bcr4Questions.push(...(bcrData4);
+  bcr1Questions.push(...bcrData1);
+  bcr2Questions.push(...bcrData2);
+  bcr3Questions.push(...bcrData3);
+  bcr4Questions.push(...bcrData4);
 
   msk1Questions.push({
     question: "What enzyme is deficient in McArdle disease?",
