--- a/index.html
+++ b/index.html
@@ -478,12 +478,17 @@
       </div>
     </div>
   </div>
-
+  <script src="focs-data2.js"></script>
+  <script src="focs-data3.js"></script>
+  <script src="focs-data4.js"></script>
+  <script src="focs-data5.js"></script>
   <script src="bcr-data1.js"></script>
   <script src="bcr-data2.js"></script>
   <script src="bcr-data3.js"></script>
   <script src="bcr-data4.js"></script>
-  <script src="focs-data.js"></script>
+  <script src="msk-data1.js"></script>
+  <script src="msk-data2.js"></script>
+  <script src="anatomy-data.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   
@@ -711,7 +716,7 @@
     // Add sample questions for testing
     function addSampleQuestions() {
       // FOCS questions
-      focsQuestions.push(...focsData);
+      focsQuestions.push(...focsData2, ...focsData3, ...focsData4, ...focsData5);
       
       // Sample BCR question
       bcrQuestions.push(...bcrData1, ...bcrData2, ...bcrData3, ...bcrData4);
