--- a/index.html
+++ b/index.html
@@ -725,7 +725,7 @@
       mskQuestions.push(...mskData1, ...mskData2);
       
       // Sample Anatomy question
-      anatomyQuestions.push(anatomyData);
+      anatomyQuestions.push(...anatomyData);
       
       // Add to all questions
       allQuestions.push(...focsQuestions, ...bcrQuestions, ...mskQuestions, ...anatomyQuestions);
